k8s/deployment-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: goat
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: goatvote/api:1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9000
