k8s/deployment-back.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: goat
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: goatvote/backend:1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
