k8s/deployment-front.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: goat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: goatvote/frontend:1.0.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
