k8s/svc-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: goat
spec:
  selector:
    app: api
  ports:
    - port: 9000
      targetPort: 9000
