k8s/svc-back.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: goat
spec:
  selector:
    app: backend
  ports:
    - port: 8000
      targetPort: 8000
