k8s/svc-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: goat
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
