k8s/svc-front.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: goat
spec:
  type: LoadBalancer  # Docker Desktop crée un LB local (127.0.0.1)
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
